[build-system]
requires = ["setuptools>=65", "pybind11>=2.11", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netrl"
version = "0.2.0"
description = "Networked RL simulation platform — gymnasium wrapper with Gilbert-Elliott channel (C++ backend)"
license = {text = "GPL-2.0-only"}
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pybind11>=2.11",
    "ns3>=3.44.post",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
exclude = ["tests*"]
