[build-system]
requires = ["setuptools>=82", "pybind11>=2.11", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netrl"
version = "0.2.0"
authors = [
  { name="Pietro Talli", email="pietrotalli@gmail.com" },
]
description = "Networked RL simulation platform — gymnasium wrapper with communication channel simulation."
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "pybind11>=2.11",
    "ns3>=3.44.post",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
exclude = ["tests*"]


[project.urls]
Homepage = "https://github.com/pietro-talli/NetRL"
Documenation = "https://netrl.readthedocs.io/en/latest/index.html"
